Moved guest user check code into User.isGuest Removed header from lobby and changed margin-top accordingly; removed Lobby nav link Removed most bitcoin information copy; replaced with some more to-the-point copy Fixed styling on deposit_bitcoins page Renamed Register button to "Sign Up"; made this visible even for guest users (converts to full user) Fixed a bug that was keeping deposit_addresses from being saved in User.convertFromGuest

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -144,6 +144,10 @@ h2 {
     min-height: 100%;
 }
 
+#container.lobby {
+    margin-top: 0;
+}
+
 #container h1, #container h2 {
     color: #DDDDDD;
     font-family: DESTROY, "Helvetica Neue", Helvetica, sans-serif;
